Fix positioning of Behance link on mobile

--- a/scss/sections/_work.scss
+++ b/scss/sections/_work.scss
@@ -31,6 +31,11 @@
 // Link to Behance
 .view-behance {
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   margin-right: 10px;
+
+  @media screen and (max-width: $largedevice) {
+    justify-content: center;
+    margin-right: 0;
+  }
 }
